# Satranc-Durum-Kontrol

./: README.md
cs-tech-assessment/: CMakeLists.txt  IO.cpp  IO.h  Konum.cpp  Konum.h  Tahta.cpp  Tahta.h  main.cpp
cs-tech-assessment/Taslar/: At.cpp  At.h  Fil.cpp  Fil.h  Kale.cpp  Kale.h  Piyon.cpp  Piyon.h  Sah.cpp  Sah.h  Tas.cpp  Tas.h  Vezir.cpp  Vezir.h
cs-tech-assessment/resources/: board4.txt  board5.txt  sonuçlar.txt
